fixed projects section on mobile

--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -75,7 +75,7 @@
     font-size: 14px;
   }
 }
-
+/* 
 @media screen and (max-width: 768px) {
   .projectSingle_last {
     flex-direction: column;
@@ -87,9 +87,9 @@
   .projectSingle h4 {
     height: 60px;
   }
-}
+} */
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 768px) {
   .phormalabs__projects {
     padding: 50px 20px;
   }
@@ -113,10 +113,10 @@
     align-items: center;
   }
   .projectSingle h4 {
-    height: 50px;
+    height: 60px;
   }
   .projectSingle p {
-    height: 100px;
+    height: 110px;
   }
   .SingleAttr {
     width: 60%;
